# gato-python

./: .gitmodules  CMakeLists.txt  README.md  admm.py  gpu_library.cu  install.bash  pcg.py  test_IIWA50.py  test_admm.py  test_linsys_solve.py  test_pend  test_pendulum_5.py
cuda_utils/: cuda_malloc.cuh
include/: gato_defines.h  gato_linsys.cuh  types.h
src/: admm_iter.cuh  admm_outer.cuh  constants.cuh  gato_pcg.cuh  gato_schur.cuh  gato_utils.cuh
testing/: admm.py  pcg_admm_m.ipynb
